log - add api to configure _log_ during runtime
Only the api and some unittests are done. The CLI integration will be
done in next few commits.

Also, improved `unittest::file::` and got rid of a few _unittest local_
constructions.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -214,6 +214,7 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/test_execute.cpp'),
     make.Compile( 'unittest/source/test_execution.cpp'),
 
+    make.Compile( 'unittest/source/log/test_stream.cpp'),
 
     make.Compile( 'unittest/source/test_memory.cpp'),
     make.Compile( 'unittest/source/test_pimpl.cpp'),
