--- a/.github/workflows/casual-build-alpha.yaml
+++ b/.github/workflows/casual-build-alpha.yaml
@@ -110,6 +110,7 @@ jobs:
   
   build-centos:
     runs-on: self-hosted
+    if: success()
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'centos'
@@ -181,6 +182,7 @@ jobs:
 
   build-suse:
     runs-on: self-hosted
+    if: success()
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'suse'
@@ -250,18 +252,21 @@ jobs:
           name: suse_rpm
           path: ./**/casual-middleware*.rpm
 
-  tag-repo:
-    runs-on: ubuntu-latest
-    needs: [calculate-version,build-centos,build-suse]
+  publish-version:
+    runs-on: self-hosted
+    needs: [build-centos,build-suse]
+    if: success()
     steps:
-      - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
+      - name: Publish suse
+        uses: actions/download-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ needs.calculate-version.outputs.build_version }}
-          tag_prefix: ""
+          name: suse_rpm
+          path: /var/www/release/
+      - name: Publish centos
+        uses: actions/download-artifact@v3
+        with:
+          name: centos_rpm
+          path: /var/www/release/
 
   notification-end:
     runs-on: ubuntu-latest
