--- a/.github/workflows/casual-build-beta.yaml
+++ b/.github/workflows/casual-build-beta.yaml
@@ -60,11 +60,21 @@ jobs:
         id: casual_release
         run: |
           echo "::set-output name=value::$( echo ${{ steps.build_version.outputs.value }} | awk -F'-' '{ print $2 }' )"
-
+  
+  notification-start:
+    runs-on: ubuntu-latest
+    needs: [calculate-version]
+    steps:  
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@0.3.2
+        with:
+          args: "Starting a new build, Repo: ${{ github.repository }}, Branch: ${{ github.ref_name }}, Version: ${{ needs.calculate-version.outputs.build_version }}, URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"           
 
   build-frontend:
     runs-on: self-hosted
-    needs: [calculate-version]
+    needs: [calculate-version,notification-start]
     steps:
       - name: check out repository casual
         uses: actions/checkout@v3
@@ -97,6 +107,7 @@ jobs:
   
   build-centos:
     runs-on: self-hosted
+    if: success()
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'centos'
@@ -168,6 +179,7 @@ jobs:
 
   build-suse:
     runs-on: self-hosted
+    if: success()
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'suse'
@@ -237,3 +249,50 @@ jobs:
           name: suse_rpm
           path: ./**/casual-middleware*.rpm
 
+  tag-repo:
+    runs-on: ubuntu-latest
+    if: success()
+    needs: [calculate-version,build-centos,build-suse]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ needs.calculate-version.outputs.build_version }}
+          tag_prefix: ""
+
+  publish-version:
+    runs-on: self-hosted
+    needs: [build-centos,build-suse,tag-repo]
+    if: success()
+    steps:
+      - name: Publish suse
+        uses: actions/download-artifact@v3
+        with:
+          name: suse_rpm
+          path: /var/www/release/
+      - name: Publish centos
+        uses: actions/download-artifact@v3
+        with:
+          name: centos_rpm
+          path: /var/www/release/
+      - name: Move rpm to right location
+        run: |
+          mv /var/www/release/casual/*.rpm /var/www/release/
+          rmdir /var/www/release/casual
+
+  notification-end:
+    runs-on: ubuntu-latest
+    needs: [build-centos,build-suse,tag-repo]
+    if: always()
+    steps: 
+      - uses: martialonline/workflow-status@v2
+        id: check
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@0.3.2
+        with:
+          args: "Build status ${{ steps.check.outputs.status }}, Repo: ${{ github.repository }}, Branch: ${{ github.ref_name }}, Version: ${{ needs.calculate-version.outputs.build_version }}, URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"           
