queue - make casual-queue-common lib again
made the casual-queue-common a lib again to avoid problem with ODR and archives.

--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -50,12 +50,13 @@ make.Environment( 'PATH', '../tools/bin' + os.pathsep + os.getenv('PATH'))
 
 # Common stuff
 
-common = make.LinkArchive( 'bin/casual-queue-common',
+common = make.LinkLibrary( 'bin/casual-queue-common',
    [
     make.Compile( 'source/common/log.cpp'),
     make.Compile( 'source/common/queue.cpp'),
     make.Compile( 'source/code.cpp'),
-   ])
+   ],
+   ['casual-common',])
  
 # Group
 
