build - implement beta and release
beta build had wrong version logic
release build implemented.

--- a/.github/workflows/casual-build-alpha.yaml
+++ b/.github/workflows/casual-build-alpha.yaml
@@ -3,10 +3,9 @@ on:
   push:
     branches:
       - 'feature/**'
-      - '!**/dev'
+      - '!feature/*/main'
       - 'patch/**'
-      - '!**/dev'
-      - '!**/main'
+      - '!patch/*/main'
 env:
   build_type: alpha
   centos_image: casual/centos-builder
