build - fix installed libs: casual-queue-common, casual-service-common

--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -57,6 +57,8 @@ common = make.LinkLibrary( 'bin/casual-queue-common',
     make.Compile( 'source/code.cpp'),
    ],
    ['casual-common',])
+
+install_lib.append( common)
  
 # Group
 
