--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -120,6 +120,7 @@ casual_common_objectfiles = [
     
     make.Compile( 'source/exception/capture.cpp'),
     make.Compile( 'source/exception/guard.cpp'),
+    make.Compile( 'source/exception/format.cpp'),
 
     make.Compile( 'source/environment.cpp'),
     make.Compile( 'source/environment/expand.cpp'),
