queue - recover queue message
recovery for queue messages with either commit or rollback
uses an admin service which tries to recover gtrids in all queue groups

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -79,6 +79,8 @@ casual_common_objectfiles = [
     
     make.Compile( 'source/transaction/context.cpp'),
     make.Compile( 'source/transaction/id.cpp'),
+    make.Compile( 'source/transaction/global.cpp'),
+
     make.Compile( 'source/transaction/resource.cpp'),
     make.Compile( 'source/transaction/transaction.cpp'),
     
