queue - fix shutdown problem for forward/queue groups
queue-forward-group groups have dependencies to queue-group,
semantically (queue lookup and such).

Before: We just asked all forwards and queue-groups to shutdown
simultaneously, which made it unnecessary difficult to handle _stale
messages_ (messages that are not consumed during shutdown. i.e. someone
writes a message during the time period: [consume last relevant message,
destroy _ipc inbound device]).

Now: We first shutdown all forwrads, then all queue-groups.

--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -13,6 +13,7 @@ make.IncludePaths( [
     '../serviceframework/include', 
     '../xatmi/include',
     '../transaction/include',
+    '../transaction/unittest/include',
     '../domain/include',
     '../domain/unittest/include',
     '../service/include',
@@ -206,6 +207,7 @@ test_casual_queue = make.LinkUnittest( 'unittest/bin/test-casual-queue',
      'sqlite3',
      'casual-unittest',
      'casual-service-unittest',
+     'casual-transaction-unittest',
      'casual-domain-discovery',
      'casual-domain-unittest',
      'casual-xatmi',
