common - add general task abstraction to help with boot/shutdown order
Added a general task abstraction that provides a unique _task id_ that
can be used to correlate the state that is needed during the task
lifetime.

The abstraction consists of:
* task::unit::Action: a callback that's invoked when a Unit starts
* task::Unit: holds an action, and a set of _message handlers_.
  A message gets dispatched to a _handler_ (for the message type), and
  it's up to the _handler_ to decide what to do.
* task::Group: hols a set of `task::Unit`. One group starts all _units_
  asynchronous/parallel, and is done when all units are done (or have
  failed).
* task::Coordinator: holds a set of `task::Group`. Each group is started
  synchronous. When a _group_ is done, the next in line starts (if any).
  The API provides a _.then( ...) semantics_ to further make it clear
  for the user that the "added _group/unit_" is invoked later (unless
  there are no current or pending, then the _unit/group_ starts
  directly)

Also: added a "real" `sink( T&& value)`

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -215,6 +215,7 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/test_range.cpp'),
     make.Compile( 'unittest/source/test_execute.cpp'),
     make.Compile( 'unittest/source/test_execution.cpp'),
+    make.Compile( 'unittest/source/test_task.cpp'),
 
     make.Compile( 'unittest/source/log/test_stream.cpp'),
 
