build - fix missed library path to service/bin
Missed it on osx since it uses magic to find libraries...

--- a/middleware/event/makefile.cmk
+++ b/middleware/event/makefile.cmk
@@ -19,6 +19,7 @@ make.LibraryPaths([
     '../common/bin',
     '../xatmi/bin',
     '../domain/bin',
+    '../service/bin',
     '../serviceframework/bin',
     '../configuration/bin']
     + make.optional_library_paths()
