--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -212,6 +212,8 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/test_conformance.cpp'),
     
     make.Compile( 'unittest/source/test_algorithm.cpp'),
+    make.Compile( 'unittest/source/container/sorted/test_set.cpp'),
+
     make.Compile( 'unittest/source/test_range.cpp'),
     make.Compile( 'unittest/source/test_execute.cpp'),
     make.Compile( 'unittest/source/test_execution.cpp'),
