build - fix build environment sourcing compatibility with zsh and bash
Bash and zsh uses different syntax for indirect expansion.
With "eval" we can achive the same thing in both shells with the same syntax.
(eval should work in all POSIX and most Bourne shells, but for now only tested in bash and zsh)

Fixes #85

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -6,7 +6,7 @@
 add_to_path() 
 {
    local name="$1"
-   local content="${!1}"
+   eval local content="\${$name}"
    if [ -d "$2" ] && [[ ":$content:" != *":$2:"* ]]; then
       if [ -z "$content" ]; then 
          export $name="$2";
