transaction - fix core when resources in distributed prepare (service) fails
Before:

* When the prepare stage failed we tried to _pop transaction_, which rendered
  a core -> we didn't have any on "the stack", by design.
* We didn't handle _transaction_control chained_ correctly
* Very cumbersome to compose _errors_ from several resources and
  transactions

Now:

* We don't core :)
* refactor error handling from exceptions to return code::tx, since
  _errors_ are expected from casual's perspective.
  This, makes _errors_ composable, and a lot easier to 'aggregate'
  errors. Some paths might have become worse, compared to _exceptions_,
  but overall, we gained.
* From service invocation: If transaction is "bad" we propagate this on
  the regular _reply.code.result_ channel -> service call gives error

fixes issue #96

--- a/middleware/example/makefile.cmk
+++ b/middleware/example/makefile.cmk
@@ -44,10 +44,10 @@ install_bin.append( target)
 # make sure we got a resource property file available when we build with a resource 
 make.Environment( 'CASUAL_RESOURCE_CONFIGURATION_FILE', casual_middleware_path + '/example/resources/resources.yaml')
 
+resource_objects = [ make.Compile( 'server/source/example/resource.cpp')]
+
 target = dsl.LinkServer( 'server/bin/casual-example-resource-server',
-    [ 
-       make.Compile( 'server/source/example/resource.cpp')
-    ],
+    resource_objects,
     [ 
         'casual-common',
         'casual-buffer'
@@ -55,6 +55,19 @@ target = dsl.LinkServer( 'server/bin/casual-example-resource-server',
     'server/source/example/resource.services.yaml')
 
 install_bin.append( target)
+
+# same as above, but does not name the resource, hence we can configure multiple
+# resources (of rm-mockup)
+target = dsl.LinkServer( 'server/bin/casual-example-dynamic-resource-server',
+    resource_objects,
+    [ 
+        'casual-common',
+        'casual-buffer'
+    ],
+    'server/source/example/dynamic.resource.services.yaml')
+
+install_bin.append( target)
+
 
 
 target = make.LinkExecutable( 'server/bin/casual-example-error-server',
