--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -214,6 +214,8 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/test_algorithm.cpp'),
     make.Compile( 'unittest/source/container/sorted/test_set.cpp'),
 
+    make.Compile( 'unittest/source/test_code.cpp'),
+
     make.Compile( 'unittest/source/test_range.cpp'),
     make.Compile( 'unittest/source/test_execute.cpp'),
     make.Compile( 'unittest/source/test_execution.cpp'),
