--- a/.github/workflows/casual-build-beta.yaml
+++ b/.github/workflows/casual-build-beta.yaml
@@ -35,32 +35,32 @@ jobs:
 
       - name: set major/minor-version
         id: major_minor
-        run: echo "::set-output name=value::${{ steps.regex-match.outputs.group1 }}" 
+        run: echo "value=${{ steps.regex-match.outputs.group1 }}" >> $GITHUB_OUTPUT
 
       - name: set base_version
         id: base_version
         run: |
           cd ${{ github.workspace }}/casual
-          echo "::set-output name=value::$( ${{ github.workspace }}/casual/pipeline/script/version.py ${{ steps.regex-match.outputs.group1 }} ${{ env.build_type}} )"
+          echo "value=$( ${{ github.workspace }}/casual/pipeline/script/version.py ${{ steps.regex-match.outputs.group1 }} ${{ env.build_type}} )" >> $GITHUB_OUTPUT
 
       - name: normalized branch
         id: normalized_branch
-        run: echo "::set-output name=value::$( echo ${{ github.ref }} | sed -E -e 's/refs\/heads\/feature\/[0-9.]+\///g' -e 's/-/_/g' -e 's/\//_/g' )"
+        run: echo "value=$( echo ${{ github.ref }} | sed -E -e 's/refs\/heads\/feature\/[0-9.]+\///g' -e 's/-/_/g' -e 's/\//_/g' )" >> $GITHUB_OUTPUT
 
       - name: set build_version
         id: build_version
         run: |
-          echo "::set-output name=value::${{ steps.base_version.outputs.value }}"
+          echo "value=${{ steps.base_version.outputs.value }}" >> $GITHUB_OUTPUT
 
       - name: set casual_version
         id: casual_version
         run: |
-          echo "::set-output name=value::$( echo ${{ steps.build_version.outputs.value }} | awk -F'-' '{ print $1 }' )"
+          echo "value=$( echo ${{ steps.build_version.outputs.value }} | awk -F'-' '{ print $1 }' )" >> $GITHUB_OUTPUT
 
       - name: set casual_release
         id: casual_release
         run: |
-          echo "::set-output name=value::$( echo ${{ steps.build_version.outputs.value }} | awk -F'-' '{ print $2 }' )"
+          echo "value=$( echo ${{ steps.build_version.outputs.value }} | awk -F'-' '{ print $2 }' )" >> $GITHUB_OUTPUT
   
   notification-start:
     runs-on: ubuntu-latest
@@ -302,7 +302,7 @@ jobs:
 
   notification-end:
     runs-on: ubuntu-latest
-    needs: [build-centos,build-suse,tag-repo]
+    needs: [calculate-version,build-centos,build-suse,tag-repo]
     if: ${{ always() }}
     steps: 
       - uses: martialonline/workflow-status@v4
