queue - fix cli to handle queue message with message attribues
Before:
* We only handled the paylaod.
* hence attribute information got lost during cli operations

Now:
* We handle both cli::message::payload::Message and
  cli::message::queue::Messsage
* cli::message::queue::Messsage is of course part of _casual pipe_.
* added `casual queue --attributes (<name> <value>)+ to add or mutate
  the attributes of the piped messages.
* added `casual pipe --human-dump` to force human readable even if
  stdout is not bound to a tty. Destructive/dangerous though...

Also:
* some minor refactorings - a few ns-collapses
* moved range::to_vector -> algorithm::container::vector::create (& CO)
* removed commented code - from commit 07ef0aa282c3f5195291a0bc6f7363a5fb6a0748

fixes issue #49

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -16,6 +16,7 @@ make.IncludePaths( [
     '../transaction/include',
     '../gateway/include',
     '../tools/include',
+    '../cli/include',
     '../buffer/include']
     + make.optional_include_paths()
     + dsl.paths().include.gtest
@@ -49,6 +50,7 @@ cli_library = make.LinkLibrary( 'bin/causal-administration-cli',
    ],
    [
       'casual-common',
+      'casual-cli',
       'casual-domain-admin-cli',
       'casual-domain-discovery-admin-cli',
       'casual-service-admin-cli',
@@ -85,18 +87,19 @@ make.LinkExecutable( 'bin/casual-administration-cli-documentation',
    ])
 
 unittest_lib = make.LinkLibrary( 'bin/casual-administration-unittest',
-    [ 
-        make.Compile( 'unittest/source/cli/command.cpp'),
-    ],
-    [ 
-        'casual-common',
-    ])
+   [ 
+      make.Compile( 'unittest/source/cli/command.cpp'),
+   ],
+   [ 
+      'casual-common',
+   ])
 
 make.LinkUnittest( 'unittest/bin/test-casual-administration',
    [
       make.Compile( 'unittest/source/cli/test_call.cpp'),
       make.Compile( 'unittest/source/cli/test_domain.cpp'),
       make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
+      make.Compile( 'unittest/source/cli/test_queue.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
    ],
    [ 
@@ -107,8 +110,8 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
    ])
 
 
-make.Install( install_exe,  dsl.paths().install + '/bin')
-make.Install( install_libs,  dsl.paths().install + '/lib')
+make.Install( install_exe, dsl.paths().install + '/bin')
+make.Install( install_libs, dsl.paths().install + '/lib')
 
 make.Install( 'etc/bash_completion.d/casual',  dsl.paths().install + '/etc/bash_completion.d')
 make.Install( 'etc/bash_completion.d/casual-log',  dsl.paths().install + '/etc/bash_completion.d')
