gateway - immediately send error reply on failed resource request
Before:
We took no immediate action when failing to correlate a descriptor
with a connection when sending resource requests.
This would occasionally lead to situations where casual-queue-forward
would hang waiting on a commit/rollback reply.

Now:
We confirm that the message was successfully sent and immediately
invoke the error-callback if not.

Fixes #98

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -15,6 +15,7 @@ make.IncludePaths( [
     '../queue/include',
     '../transaction/include',
     '../gateway/include',
+    '../gateway/unittest/include',
     '../tools/include',
     '../buffer/include']
     + make.optional_include_paths()
@@ -98,12 +99,16 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_domain.cpp'),
       make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
+      make.Compile( 'unittest/source/cli/test_transaction.cpp'),
    ],
    [ 
       unittest_lib,
-      'casual-common', 
+      'casual-common',
+      'casual-xatmi',
       'casual-unittest',
       'casual-domain-unittest',
+      'casual-gateway-unittest',
+      'casual-serviceframework',
    ])
 
 
