common - minor refactoring - mutated and added a few things.
* using string::Argument to be able to take std::string_view
* some ns collapses
* ostream operator -> description
* fixed some stuff in the global `.gitignore`
* generalized ipc::receive a bit more to device::receive
* communication::instance::lookup::request -> send instance lookup
  request. caller needs to handle the future reply "manually.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-#
-# eclipse project
-#
+# eclipse project (do anybody use this anymore?)
 .settings/
 .pydevproject
 .cproject
@@ -11,52 +9,38 @@
 
 # vs code
 .vscode/
+*.code-workspace
+.unititest_domain_home/
 
 casual.env
-
-.unittest_domain_home/
-
-
 core
 
 
-#
 # Build directories
-#
 dependencies/
 obj/
 bin/
 
-#
 # Build files
-#
-*.mk
 *.pyc
-
 *.log
 /Debug/
 
-
-#
 # casual stuff
-#
 .casual/
-
 
 /Default/
 /Release/
 
-#
-# Tag files produced by Global
-#
+# Tag files produced by Global (what is this?)
 GPATH
 GRTAGS
 GSYMS
 GTAGS
-#
-# Visual code workspace
-#
-*.code-workspace
 
 # Test artifacts
 report.xml
+
+# osx crap files
+.DS_Store
+
