cli - generalized --state option and the serialization to stdout
Lifted all (?) _admin::cli_ `--state` options to use the generic one.
This will help us to make the state more _human readable_ in future
patches.

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -12,6 +12,7 @@ make.IncludePaths([
    '../buffer/include',
    '../configuration/include',
    '../xatmi/include',
+   '../cli/include',
    '../serviceframework/include']
    + make.optional_include_paths()
    + dsl.paths().include.gtest
