discovery: add state and metric information to discovery
This patch adds a state service that exposes some of the state the
discovery has.

The most interesting state is counts of messages sent and received,
which by it self is probably a good metric to have, and we can deduce
other stuff that might be more of interest to the user.

This is probably something we want to generalize to all _managers_.

resolves essue: #110

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -123,6 +123,7 @@ install_headers += [
 discovery_archive = make.LinkArchive( 'bin/casual-domain-discovery-archive',
     [
         make.Compile( 'source/discovery/common.cpp'),
+        make.Compile( 'source/discovery/state.cpp'),
     ]
 )
 
@@ -131,11 +132,13 @@ discovery_executable = make.LinkExecutable( 'bin/casual-domain-discovery',
     [
         make.Compile( 'source/discovery/main.cpp'),
         make.Compile( 'source/discovery/handle.cpp'),
-        make.Compile( 'source/discovery/state.cpp'),
+        make.Compile( 'source/discovery/admin/server.cpp'),
+        make.Compile( 'source/discovery/admin/transform.cpp'),
     ],
     [
         discovery_archive,
         'casual-common',
+        'casual-serviceframework',
     ]
 )
 install_bins.append( discovery_executable)
@@ -158,7 +161,9 @@ target = make.LinkLibrary( 'bin/casual-domain-discovery-admin-cli',
     ],
     [
         domain_discovery_library,
+        discovery_archive,
         'casual-common',
+        'casual-serviceframework',
     ]
 )
 
