--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -49,6 +49,8 @@ install_headers = []
 
 casual_common_objectfiles = [
 
+    make.Compile( 'source/assert.cpp'),
+
     make.Compile( 'source/strong/id.cpp'),
     make.Compile( 'source/flag/xa.cpp'),
 
