--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -99,6 +99,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
    [
       make.Compile( 'unittest/source/cli/test_call.cpp'),
       make.Compile( 'unittest/source/cli/test_domain.cpp'),
+      make.Compile( 'unittest/source/cli/test_discovery.cpp'),
       make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
       make.Compile( 'unittest/source/cli/test_queue.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
