discovery: add build configuration option to set a service visibility
This patch adds build option to set what visibility semantics a given
service should have.

server:
  services:
    - name: a
      visibility: (un)discoverable

Also, the domain configuration for discoverable has been changed to:

domain:
  services:
    - name: a
      visibility: (un)discoverable

That is, either the value `discoverable` or `undiscoverable`.

fixes build part of issue #86

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -29,6 +29,11 @@ server:
       # name of the function the service should bind to
       function: casual_example_echo
 
+    - name: casual/example/undiscoverable/echo
+      function: casual_example_undiscoverable_echo
+      visibility: undiscoverable
+      
+
     - name: casual/example/domain/name
       function: casual_example_domain_name
 
