http - use multiplexing in nginx inbound
Implemented multiplexing in nginx plugin and refactored http/inbound.

commands implemented:
- casual_pass
- casual_directive - default service
- casual_url_prefix - default /

--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -53,6 +53,7 @@ common_outbound_archive = make.LinkArchive( 'bin/casual-http-outbound-common',
 
 common_inbound_library = make.LinkLibrary( 'bin/casual-http-inbound-common',
    [
+       make.Compile( 'source/inbound/c/api.cpp'),
        make.Compile( 'source/inbound/call.cpp')
    ],
    [
