--- a/.github/workflows/casual-build-alpha.yaml
+++ b/.github/workflows/casual-build-alpha.yaml
@@ -109,7 +109,7 @@ jobs:
   
   build-centos:
     runs-on: self-hosted
-    if: success()
+    if: ${{ success() }}
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'centos'
@@ -149,6 +149,9 @@ jobs:
           source /git/casual/casual/pipeline/script/pipeline.env
 
           bash /git/casual/casual/pipeline/script/pre/cleanup
+          
+          touch /git/casual/casual.log
+          chmod 777 /git/casual/casual.log
 
           bash /git/casual/casual/pipeline/script/backend/$DISTRIBUTION/build ${{ needs.calculate-version.outputs.build_version }}
           bash /git/casual/casual/pipeline/script/package ${{ needs.calculate-version.outputs.casual_version }} ${{ needs.calculate-version.outputs.casual_release }} $DISTRIBUTION
@@ -159,14 +162,18 @@ jobs:
 
           chmod +x builder.sh
 
-
       - name: Build
         run: |
           docker run --rm -v ${{ github.workspace }}:/git/casual:Z -i ${{ env.centos_image}}:${{ needs.calculate-version.outputs.major_minor }}
 
+      - name: Logpublisher
+        if: ${{ failure() || cancelled() }}
+        run: |
+          ${{ github.workspace }}/casual/pipeline/script/post/logpublisher ${{ github.workspace }}/casual.log ${DISTRIBUTION}-${{ needs.calculate-version.outputs.build_version }}
+
       - name: Test Report
         uses: dorny/test-reporter@v1
-        if: success() || failure()    # run this step even if previous step failed
+        if: ${{ success() || failure() }}    # run this step even if previous step failed
         with:
           name: Google Tests - Centos # Name of the check run which will be created
           path: ./**/report.xml       # Path to test results
@@ -181,7 +188,7 @@ jobs:
 
   build-suse:
     runs-on: self-hosted
-    if: success()
+    if: ${{ success() }}
     needs: [calculate-version,build-frontend]
     env:
       DISTRIBUTION: 'suse'
@@ -221,6 +228,9 @@ jobs:
           source /git/casual/casual/pipeline/script/pipeline.env
 
           bash /git/casual/casual/pipeline/script/pre/cleanup
+          
+          touch /git/casual/casual.log
+          chmod 777 /git/casual/casual.log
 
           bash /git/casual/casual/pipeline/script/backend/$DISTRIBUTION/build ${{ needs.calculate-version.outputs.build_version }}
           bash /git/casual/casual/pipeline/script/package ${{ needs.calculate-version.outputs.casual_version }} ${{ needs.calculate-version.outputs.casual_release }} $DISTRIBUTION
@@ -231,14 +241,18 @@ jobs:
 
           chmod +x builder.sh
 
-
       - name: Build
         run: |
           docker run --rm -v ${{ github.workspace }}:/git/casual:Z -i ${{ env.suse_image}}:${{ needs.calculate-version.outputs.major_minor }}
 
+      - name: Logpublisher
+        if: ${{ failure() || cancelled() }}
+        run: |
+          ${{ github.workspace }}/casual/pipeline/script/post/logpublisher ${{ github.workspace }}/casual.log ${DISTRIBUTION}-${{ needs.calculate-version.outputs.build_version }}
+
       - name: Test Report
         uses: dorny/test-reporter@v1
-        if: success() || failure()   # run this step even if previous step failed
+        if: ${{ success() || failure() }}  # run this step even if previous step failed
         with:
           name: Google Tests - Suse  # Name of the check run which will be created
           path: ./**/report.xml      # Path to test results
@@ -254,7 +268,7 @@ jobs:
   notification-end:
     runs-on: ubuntu-latest
     needs: [build-centos,build-suse]
-    if: always()
+    if: ${{ always() }}
     steps: 
       - uses: martialonline/workflow-status@v2
         id: check
