configuration: improve configuration update semantics
This patch adds the ability for _configuration stakeholders_ to provide
a _contract_ that defines how domain-manager should update, fetch
configuration to and from the stakeholder.

This make it a lot easier for new parties to register for configuration
updates, when configuration changes.

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -58,7 +58,7 @@ manager_archive = make.LinkArchive( 'bin/casual-domain-manager',
 # utility for other 'managers'
 utility_library = make.LinkLibrary( 'bin/casual-domain-utility',
     [
-        make.Compile( 'source/configuration/fetch.cpp'),
+        make.Compile( 'source/configuration.cpp'),
     ],
     [
         common_library,
