discovery: don't forward discovery if service/queue is known
Before: Even if a (remote) service was known to a domain during a
discovery, the discovery was _forarded_ downstream ( if there were
downstream domains, and the upstream was configured with _discovery
forward_.

Now: We reply directly if a (remote) service/queue is known.

resolves #141

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -137,6 +137,7 @@ discovery_executable = make.LinkExecutable( 'bin/casual-domain-discovery',
     ],
     [
         discovery_archive,
+        utility_library,
         'casual-common',
         'casual-serviceframework',
     ]
