--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -102,6 +102,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_discovery.cpp'),
       make.Compile( 'unittest/source/cli/configuration/test_normalize.cpp'),
       make.Compile( 'unittest/source/cli/test_queue.cpp'),
+      make.Compile( 'unittest/source/cli/configuration/test_set_operations.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
       make.Compile( 'unittest/source/cli/test_transaction.cpp'),
       make.Compile( 'unittest/source/cli/test_gateway.cpp'),
