--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -104,6 +104,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_queue.cpp'),
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
       make.Compile( 'unittest/source/cli/test_transaction.cpp'),
+      make.Compile( 'unittest/source/cli/test_gateway.cpp'),
    ],
    [ 
       unittest_lib,
