event - show trid in metric when trid is created by callee (#142)
Earlier only metrics contained trid when caller created the transcation.
Now even callee created transcations are visible in metrics.

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -29,10 +29,17 @@ server:
       # name of the function the service should bind to
       function: casual_example_echo
 
+    - name: casual/example/auto/echo
+      function: casual_example_echo
+      transaction: auto
+
+    - name: casual/example/atomic/echo
+      function: casual_example_echo
+      transaction: atomic
+
     - name: casual/example/undiscoverable/echo
       function: casual_example_undiscoverable_echo
       visibility: undiscoverable
-      
 
     - name: casual/example/domain/name
       function: casual_example_domain_name
