unittest: add wait::until::advertised queue utility
This patch adds a unittest utility to block/wait until a given queue is
available/advertised.

This is a tool to help make unittsts more durable. Used it in one
unittest that could fail because of queues not available when due to
timing.

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -85,6 +85,7 @@ make.LinkUnittest( 'unittest/bin/test-casual',
       'casual-common', 
       'casual-buffer',
       'casual-xatmi', 
+      'casual-queue-unittest',
       'casual-queue-api',
       'casual-queue-common',
       'casual-unittest',
