--- a/.github/workflows/casual-build-alpha.yaml
+++ b/.github/workflows/casual-build-alpha.yaml
@@ -131,7 +131,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'casualcore/casual-make'
-          ref: 'master'
+          ref: ${{ needs.calculate-version.outputs.major_minor }}
           path: 'casual-make'
 
       - name: download frontend
@@ -210,7 +210,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'casualcore/casual-make'
-          ref: 'master'
+          ref: ${{ needs.calculate-version.outputs.major_minor }}
           path: 'casual-make'
 
       - name: download frontend
