--- a/.github/workflows/casual-build-release.yaml
+++ b/.github/workflows/casual-build-release.yaml
@@ -129,7 +129,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'casualcore/casual-make'
-          ref: 'master'
+          ref: ${{ needs.calculate-version.outputs.major_minor }}
           path: 'casual-make'
 
       - name: download frontend
@@ -209,7 +209,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'casualcore/casual-make'
-          ref: 'master'
+          ref: ${{ needs.calculate-version.outputs.major_minor }}
           path: 'casual-make'
 
       - name: download frontend
