--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -145,9 +145,9 @@ service_unittest = make.LinkLibrary( 'bin/casual-service-unittest',
     ])
 
  
-make.LinkUnittest( 'unittest/bin/test-casual-service',
+test_service = make.LinkUnittest( 'unittest/bin/test-casual-service',
     [
-        make.Compile( 'unittest/source/forward/test_cache.cpp'),
+        make.Compile( 'unittest/source/test_forward.cpp'),
         make.Compile( 'unittest/source/manager/test_manager.cpp'),
         make.Compile( 'unittest/source/manager/test_state.cpp'),
         make.Compile( 'unittest/source/manager/test_api.cpp'),
@@ -165,6 +165,8 @@ make.LinkUnittest( 'unittest/bin/test-casual-service',
         'casual-unittest',
         'casual-domain-unittest',
     ])
+
+make.Dependencies( test_service, install_bins)
 
 # Install
 make.Install( install_bins, dsl.paths().install + '/bin')
