--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -106,6 +106,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
       make.Compile( 'unittest/source/cli/test_transaction.cpp'),
       make.Compile( 'unittest/source/cli/test_gateway.cpp'),
+      make.Compile( 'unittest/source/cli/test_service.cpp')
    ],
    [ 
       unittest_lib,
