--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -106,7 +106,8 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       make.Compile( 'unittest/source/cli/test_internal.cpp'),
       make.Compile( 'unittest/source/cli/test_transaction.cpp'),
       make.Compile( 'unittest/source/cli/test_gateway.cpp'),
-      make.Compile( 'unittest/source/cli/test_service.cpp')
+      make.Compile( 'unittest/source/cli/test_service.cpp'),
+      make.Compile( 'unittest/source/cli/test_pipe.cpp'),
    ],
    [ 
       unittest_lib,
