service: cli --list-services does not add - when _contract_ is missing
Before: It was hard to sort stuff, or other unix related tools,
when column count is not the same for each row.

Resolves #281

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -12,6 +12,7 @@ make.IncludePaths( [
     '../domain/include',
     '../domain/unittest/include',
     '../service/include',
+    '../service/unittest/include',
     '../queue/include',
     '../transaction/include',
     '../gateway/include',
@@ -115,6 +116,7 @@ make.LinkUnittest( 'unittest/bin/test-casual-administration',
       'casual-xatmi',
       'casual-unittest',
       'casual-domain-unittest',
+      'casual-service-unittest',
       'casual-gateway-unittest',
       'casual-serviceframework',
    ])
