--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -98,6 +98,7 @@ unittest_lib = make.LinkLibrary( 'bin/casual-administration-unittest',
 
 make.LinkUnittest( 'unittest/bin/test-casual-administration',
    [
+      make.Compile( 'unittest/source/cli/test_casual.cpp'),
       make.Compile( 'unittest/source/cli/test_call.cpp'),
       make.Compile( 'unittest/source/cli/test_domain.cpp'),
       make.Compile( 'unittest/source/cli/test_discovery.cpp'),
