gateway: branch transaction in inbound
This patch branches transactions on inbound. Asks TM for the branch for
at given gtrid. This gives several benefits: TM is responsible for the
branching. Several different transaction branches from other domains
will converge to one domain local transaction branch.

outbound still branches which will be removed in a later commit.

issue #238

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -126,6 +126,7 @@ inbound_archive = make.LinkArchive( 'bin/casual-gateway-inbound-archive',
     [
         make.Compile( 'source/group/inbound/handle.cpp'),
         make.Compile( 'source/group/inbound/state.cpp'),
+        make.Compile( 'source/group/inbound/task/create.cpp'),
     ]
 )
 
@@ -186,11 +187,13 @@ target_unittest = make.LinkUnittest( 'bin/test-casual-gateway',
         make.Compile( 'unittest/source/test_manager.cpp'),
         make.Compile( 'unittest/source/test_protocol.cpp'),
         make.Compile( 'unittest/source/group/outbound/test_state.cpp'),
+        make.Compile( 'unittest/source/group/inbound/test_state.cpp'),
         make.Compile( 'unittest/source/test_reverse.cpp'),
    ] + protocol_objects, 
    [    
         unittest_archive,
         outbound_archive,
+        inbound_archive,
         common_archive, 
         'casual-serviceframework',
         'casual-queue-api',
