queue: expand group concept to include fowards
This commit expands the group concept to include forwards. Users can
now add memberships to forwards and forward-groups. Furthermore, groups
can now be disabled, with the consequence that any entity with a dependency
to a disabled group will itself be disabled.

See also #6

--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -29,6 +29,7 @@ lib_configuration = make.LinkLibrary( 'bin/casual-configuration',
         make.Compile( 'source/user.cpp'),
         make.Compile( 'source/model.cpp'),
         make.Compile( 'source/system.cpp'),
+        make.Compile( 'source/group.cpp'),
         make.Compile( 'source/user/environment.cpp'),
         make.Compile( 'source/model/transform.cpp'),
         make.Compile( 'source/model/load.cpp'),
@@ -68,6 +69,7 @@ make.LinkUnittest( 'bin/test-casual-configuration',
    [
         make.Compile( 'unittest/source/test_model.cpp'),
         make.Compile( 'unittest/source/test_environment.cpp'),
+        make.Compile( 'unittest/source/test_group.cpp'),
         
         make.Compile( 'unittest/source/test_build.cpp'),
         make.Compile( 'unittest/source/user/test_validate.cpp'),
