--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -82,6 +82,12 @@ target = make.LinkLibrary( 'bin/casual-gateway-admin-cli',
 
 install_lib.append( target)
 
+group_archive = make.LinkArchive( 'bin/casual-gateway-group-archive',
+    [
+        make.Compile( 'source/group/connection.cpp'),
+    ]
+)
+
 # Outbound
 
 outbound_archive = make.LinkArchive( 'bin/casual-gateway-outbound-archive',
@@ -98,6 +104,7 @@ target = make.LinkExecutable( 'bin/casual-gateway-outbound-group',
         make.Compile( 'source/group/outbound/main.cpp'),
     ],
     [
+        group_archive,
         outbound_archive,
         common_archive,
         'casual-domain-discovery',
@@ -112,6 +119,7 @@ target = make.LinkExecutable( 'bin/casual-gateway-outbound-reverse-group',
         make.Compile( 'source/group/outbound/reverse/main.cpp'),
     ],
     [
+        group_archive,
         outbound_archive,
         common_archive,
         'casual-domain-discovery',
@@ -136,6 +144,7 @@ target = make.LinkExecutable( 'bin/casual-gateway-inbound-group',
     make.Compile( 'source/group/inbound/main.cpp'),
 ],
 [
+    group_archive,
     inbound_archive,
     common_archive, 
     'casual-domain-discovery',
@@ -150,6 +159,7 @@ target = make.LinkExecutable( 'bin/casual-gateway-inbound-reverse-group',
         make.Compile( 'source/group/inbound/reverse/main.cpp'),
     ],
     [
+        group_archive,
         inbound_archive,
         common_archive, 
         'casual-domain-discovery',
