--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -100,6 +100,7 @@ make.LinkUnittest( 'unittest/bin/test-http',
       'casual-unittest',
       'casual-xatmi',
       'casual-domain-discovery',
+      'casual-serviceframework',
       'curl'
    ])  
    
