build: adapt pipeline to multiple runners
Has adapted github actions pipeline to handle multiple runners.

--- a/.github/workflows/casual-build-beta.yaml
+++ b/.github/workflows/casual-build-beta.yaml
@@ -281,7 +281,7 @@ jobs:
           tag_prefix: ""
 
   publish-version:
-    runs-on: self-hosted
+    runs-on: [self-hosted, casual, publish]
     needs: [build-centos,build-suse,tag-repo]
     if: ${{ success() }}
     steps:
