--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -54,6 +54,7 @@ casual_common_objectfiles = [
 
     make.Compile( 'source/strong/id.cpp'),
     make.Compile( 'source/flag/xa.cpp'),
+    make.Compile( 'source/flag/xatmi.cpp'),
 
     make.Compile( 'source/server/context.cpp'),
     make.Compile( 'source/server/lifetime.cpp'),
