common: resetting system environment variables leaks memory on linux
Now: We added our own environment container that has precedence over the
system one. We act as if the system environment is immutable.
* variable::set adds or update in our mutable container
* variable::get first tries our mutable container, then the system on

This hides any problem with the system environment, and from the API we
just get and set environment variables.

@note This patch does give errors in administration unittest, which is
fixed in the next patch

Fixes #335

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -94,6 +94,7 @@ unittest_lib = make.LinkLibrary( 'bin/casual-administration-unittest',
    ],
    [ 
       'casual-common',
+      'casual-unittest',
    ])
 
 make.LinkUnittest( 'unittest/bin/test-casual-administration',
