build: add new builder
Has added yet another builder

--- a/.github/workflows/casual-build-beta.yaml
+++ b/.github/workflows/casual-build-beta.yaml
@@ -107,7 +107,7 @@ jobs:
           path: './**/casual-webapp.zip'
   
   build-centos:
-    runs-on: self-hosted
+    runs-on: [self-hosted, builder]
     if: ${{ success() }}
     needs: [calculate-version,build-frontend]
     env:
@@ -187,7 +187,7 @@ jobs:
           path: ./**/casual-middleware*.rpm
 
   build-suse:
-    runs-on: self-hosted
+    runs-on: [self-hosted, builder]
     if: ${{ success() }}
     needs: [calculate-version,build-frontend]
     env:
