http: use route name in outbound when ack:ing service calls
This patch fixes an issue where the http-outbound would ack with
the 'original' service name, rather than the route. This resulted
in no metrics being collected for the route.

Resolves #364

--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -86,6 +86,7 @@ make.LinkUnittest( 'unittest/bin/test-http',
         make.Compile( 'unittest/source/outbound/test_model.cpp'),
         make.Compile( 'unittest/source/outbound/test_transcode.cpp'),
         make.Compile( 'unittest/source/outbound/test_state.cpp'),
+        make.Compile( 'unittest/source/outbound/test_request.cpp'),
         make.Compile( 'unittest/source/inbound/test_call.cpp'),
         make.Compile( 'unittest/source/test_outbound.cpp'),
         make.Compile( 'unittest/source/test_code.cpp'),
